# labeille

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  README.md  laruche_info.md  pyproject.toml
.claude/skills/task-workflow/: SKILL.md
doc/: benchmarking.md  compat.md  enrichment.md  free-threaded.md  workflow.md
src/labeille/: __init__.py  analyze.py  analyze_cli.py  bench_cli.py  bisect.py  cext_build.py  cext_build_cli.py  classifier.py  cli.py  cli_utils.py  compat.py  compat_cli.py  crash.py  formatting.py  ft_cli.py  import_map.py  io_utils.py  logging.py  migrations.py  registry.py  registry_cli.py  registry_ops.py  repo_ops.py  resolve.py  runner.py  runner_models.py  scan_deps.py  summary.py  tsan_run.py  tsan_run_cli.py  yaml_lines.py
src/labeille/bench/: __init__.py  anomaly.py  cache.py  compare.py  config.py  constraints.py  display.py  export.py  results.py  runner.py  stats.py  system.py  timing.py  tracking.py  trends.py
src/labeille/data/: tsan_suppressions.txt
src/labeille/ft/: __init__.py  analysis.py  compare.py  compat.py  display.py  export.py  results.py  runner.py
tests/: bench_test_helpers.py  ft_test_helpers.py  test_analyze.py  test_analyze_cli.py  test_bench_anomaly.py  test_bench_cache.py  test_bench_cli.py  test_bench_compare.py  test_bench_config.py  test_bench_constraints.py  test_bench_display.py  test_bench_export.py  test_bench_per_test.py  test_bench_results.py  test_bench_runner.py  test_bench_stats.py  test_bench_system.py  test_bench_timing.py  test_bench_tracking.py  test_bench_trends.py  test_bisect.py  test_cext_build.py  test_cext_build_cli.py  test_classifier.py  test_cli.py  test_cli_utils.py  test_compat.py  test_compat_cli.py  test_crash.py  test_formatting.py  test_ft_analysis.py  test_ft_cli.py  test_ft_compare.py  test_ft_compat.py  test_ft_display.py  test_ft_export.py  test_ft_results.py  test_ft_runner.py  test_installer.py  test_integration.py  (+16 more)
