[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labeille"
version = "0.1.0"
description = "Find crashes in JIT-enabled CPython builds by running real-world package test suites"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Daniel Diniz", email = "74280297+devdanzin@users.noreply.github.com" },
]
keywords = ["cpython", "jit", "testing", "fuzzing", "crash-detection", "compiler-bugs"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
labeille = "labeille.cli:main"

[project.urls]
Homepage = "https://github.com/devdanzin/labeille"
Repository = "https://github.com/devdanzin/labeille"
"Bug Tracker" = "https://github.com/devdanzin/labeille/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "registry/",
    "results/",
    ".gitkeep",
    "doc/",
    "repositories/",
    "venvs/",
    "scripts/",
    "google-cloud-core/",
    "openai/",
    ".claude/",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "CREDITS.md",
    "*.log",
]

[tool.hatch.build.targets.wheel]
packages = ["src/labeille"]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = ["labeille"]

[tool.mypy]
strict = true
packages = ["labeille"]
mypy_path = ["src"]
